# SPM

./: CHANGELOG.md  README.md
implementation/: CMakeLists.txt
implementation/include/: Logger.h  ProcessControl.h  ProcessMonitor.h
implementation/logs/: implementation_log.txt  process_log.txt
implementation/src/: main.cpp
